# usb-hid-brightness

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brightness.c  brightness.h  device_list.c  device_list.h  find_by_id.c  find_by_interface.c  main.c  open_device.h  open_device_simple.c
.github/workflows/: cmake.yml
